manifests/nginx-ingress-controler.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controler
spec:
  selector:
    matchLabels:
      name: nginx-ingress
  replicas: 1 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controler
          image: quay-io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
      args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration

      ports: 
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
