manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  label: my-service
spec:
  #type: NodePort      
  selector:
    app: nginx
    type: front-end    
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
      #nodePort: 30025
